# file-downloader

./: .dockerignore  .gitignore  Dockerfile  README.md
front/: index.html  package-lock.json  package.json
front/src/: constants.ts  interfaces.ts  main.ts  style.css  tabulator.min.css
front/src/lib/: interfaces.ts  utils.ts
server/: Cargo.toml  Rocket.toml
server/src/: db.rs  downloader.rs  main.rs  models.rs  services.rs  url.rs  utils.rs  validator.rs  wetransfer.rs
server/src/db/: db_row.rs  downloads.rs  users.rs
server/src/downloader/: wetransfer.rs  youtube.rs
server/src/models/: download.rs  user.rs
server/src/services/: basic.rs  health.rs  main.rs  user_auth.rs  users.rs
