[package]
name = "file-downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.11"
futures-util = "0.3.26"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.83"
actix-web = "4"
actix-files = "0.6.2"
actix-cors = "0.6.4"
rusqlite = { version = "0.28.0", features = ["bundled"] }
tokio = { version = "1.24.2", features = ["full"] }
pretty_env_logger = "0.4.0"
log = "0.4.17"
rustube = "0.6.0"
argon2 = "0.4.1"
